--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,11 +224,125 @@ nav {
 #produk .showcase .card-text {
   text-align: justify;
   font-size: 0.8rem;
-  font-weight: 400;
+  font-weight: 400; 
 }
 
 #produk .showcase .card-text strong {
   color: #333;
   font-size: 0.9rem;
 }
+
+#produk .showcase .mengapa-memilih-kami .items {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: stretch;
+  grid-gap: 0.5rem;
+}
+
+#produk .showcase .mengapa-memilih-kami .items .item {
+  text-align: center;
+  padding: 1rem;
+  background: #abc747;
+}
+
+#produk .showcase .mengapa-memilih-kami .items p {
+  margin: 0;
+  padding: 0.3rem 0;
+}
+
+#produk .showcase .mengapa-memilih-kami .items .item .title-item {
+  font-family: "Fredoka One", cursive;
+  font-size: 1rem;
+}
+
+#produk .showcase .mengapa-memilih-kami .items .item .title-desc {
+  font-size: 0.9rem;
+}
 /* ? =========End Produk Section================= */
+
+/* ? =========Testimoni Section================= */
+#testimoni {
+  position: relative;
+  background: url('../img/palembang.jpg') no-repeat center center/cover;
+}
+
+#testimoni::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+  background: rgba(20, 20, 20, 0.7);
+}
+
+#testimoni .showcase {
+  position: relative;
+  z-index: 3;
+  width: 90%;
+  margin: 0 auto;
+  padding: 1rem 1.5rem 2rem;
+}
+
+#testimoni .showcase h2 {
+  color: #faf9f7;
+  padding: 2rem 0 1rem;
+  text-align: center;
+  font-size: 1.7rem;
+}
+
+#testimoni .showcase p {
+  color: #faf9f7;
+  font-weight: 400;
+  text-align: justify;
+  font-size: 1rem;
+  padding: 0.5rem 0 1rem;
+}
+
+#testimoni .showcase p i {
+  color: #fffb14;
+}
+
+#testimoni .showcase .card {
+  background: rgba(250, 249, 247, 0.8);
+}
+
+#testimoni .showcase .card img {
+  border-radius: 50%;
+  width: 50%;
+  margin: 0 auto;
+  padding: 1rem 0 1rem;
+}
+#testimoni .showcase .card .card-body {
+  padding: 0 1rem 1rem;
+}
+
+#testimoni .showcase .card .card-body p.testimoni-title {
+  margin: 0;
+  text-align: center;
+  color: #333; 
+  font-family: "Fredoka One", cursive;
+  font-size: 1rem;
+}
+
+#testimoni .showcase .card .card-body p.testimoni-text {
+  margin: 0;
+  text-align: center;
+  color: #333;
+  font-weight: 400;
+  font-style: italic;
+  font-size: 0.8rem;
+  line-height: 1.2;
+  padding: 0 0.8 0.5rem;
+  min-height: 6rem;
+}
+
+#testimoni .showcase .card .card-body .rating {
+  padding: 0 1rem 0.5rem;
+  margin: 0 auto;
+  text-align: center;
+}
+/* ? =========End Testimoni Section================= */
+
