--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,67 @@ strong {
 }
 /* ? ==========End Global======================== */
 
+/* ? ==========Fixed Button====================== */
+.fixed-whatsapp {
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  z-index: 10;
+  color: #36d406;
+  background: rgba(250, 249, 247, 0.8);
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
+  margin: auto;
+}
+
+.fixed-whatsapp .btn-whatsapp,
+.fixed-instagram .btn-instagram,
+.fixed-facebook .btn-facebook {
+  padding: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.fixed-whatsapp .btn-whatsapp img,
+.fixed-instagram .btn-instagram img,
+.fixed-facebook .btn-facebook img  {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 5px;
+}
+
+.fixed-instagram {
+  position: fixed;
+  bottom: 70px;
+  left: 10px;
+  z-index: 10;
+  color: #d40606;
+  background: rgba(250, 249, 247, 0.8);
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  border: 0;
+  box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
+}
+
+.fixed-facebook {
+  position: fixed;
+  bottom: 130px;
+  left: 10px;
+  z-index: 10;
+  color: #3a4efc;
+  background: rgba(250, 249, 247, 0.8);
+  height: 50px;
+  width: 50px;
+  border-radius: 100%;
+  border: 0;
+  box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
+}
+/* ? ==========End Fixed Button================== */
+
 /* ? ==========Navbar============================ */
 nav {
   height: 10vh;
@@ -325,6 +386,7 @@ nav {
   color: #333; 
   font-family: "Fredoka One", cursive;
   font-size: 1rem;
+  padding: 0.5rem 0;
 }
 
 #testimoni .showcase .card .card-body p.testimoni-text {
