--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,18 +21,27 @@ strong {
 /* ? ==========End Global======================== */
 
 /* ? ==========Fixed Button====================== */
-.fixed-whatsapp {
+.fixed-whatsapp,
+.fixed-instagram,
+.fixed-facebook {
   position: fixed;
   bottom: 10px;
   left: 10px;
   z-index: 10;
-  color: #36d406;
   background: rgba(250, 249, 247, 0.8);
-  height: 50px;
-  width: 50px;
+  height: 40px;
+  width: 40px;
   border-radius: 100%;
   box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
   margin: auto;
+}
+
+.fixed-instagram {
+  bottom: 70px !important;
+}
+
+.fixed-facebook {
+  bottom: 130px !important;
 }
 
 .fixed-whatsapp .btn-whatsapp,
@@ -50,34 +59,6 @@ strong {
   height: 100%;
   margin: auto;
   padding: 5px;
-}
-
-.fixed-instagram {
-  position: fixed;
-  bottom: 70px;
-  left: 10px;
-  z-index: 10;
-  color: #d40606;
-  background: rgba(250, 249, 247, 0.8);
-  height: 50px;
-  width: 50px;
-  border-radius: 100%;
-  border: 0;
-  box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
-}
-
-.fixed-facebook {
-  position: fixed;
-  bottom: 130px;
-  left: 10px;
-  z-index: 10;
-  color: #3a4efc;
-  background: rgba(250, 249, 247, 0.8);
-  height: 50px;
-  width: 50px;
-  border-radius: 100%;
-  border: 0;
-  box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
 }
 /* ? ==========End Fixed Button================== */
 
