--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,23 +25,24 @@ strong {
 .fixed-instagram,
 .fixed-facebook {
   position: fixed;
-  bottom: 10px;
+  bottom: 40px;
   left: 10px;
   z-index: 10;
   background: rgba(250, 249, 247, 0.8);
   height: 40px;
   width: 40px;
+  border: 0;
   border-radius: 100%;
   box-shadow: 3px 3px rgba(10, 10, 10, 0.3);
   margin: auto;
 }
 
 .fixed-instagram {
-  bottom: 70px !important;
+  bottom: 100px !important;
 }
 
 .fixed-facebook {
-  bottom: 130px !important;
+  bottom: 160px !important;
 }
 
 .fixed-whatsapp .btn-whatsapp,
@@ -50,6 +51,12 @@ strong {
   padding: 0;
   width: 100%;
   height: 100%;
+}
+
+.fixed-whatsapp .btn-whatsapp:hover,
+.fixed-instagram .btn-instagram:hover,
+.fixed-facebook .btn-facebook:hover {
+  opacity: 0.5;
 }
 
 .fixed-whatsapp .btn-whatsapp img,
