--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,7 @@ body {
 h1,
 h2,
 h3,
+h4,
 .salam {
   font-family: "Fredoka One", cursive;
 }
@@ -251,22 +252,40 @@ nav {
   padding: 1rem 0;
 }
 
+#produk .showcase h4 {
+  margin: 0;
+  font-size: 1.1rem;
+  color: #333;
+  padding: 1rem 0;
+}
+
 #produk .showcase p {
   font-size: 1rem;
   font-weight: 400;
 }
 
+#produk .showcase .daftar-harga .paket-qurban .col-md:nth-child(even) .card {
+  background: #E4E5D5;
+}
+
 #produk .showcase .card {
   background-color: #e2cfa2;
+  border-radius: 5px;
+  border: 0;
+  box-shadow: 5px 5px rgba(10, 10, 10, 0.1);
+}
+
+#produk .showcase .card:nth-child(even) {
+  background-color: #faf9f7;
 }
 
 #produk .showcase .card-title {
   font-family: "Fredoka One", cursive;
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 #produk .showcase .card-subtitle {
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
 }
 
@@ -274,11 +293,12 @@ nav {
   text-align: justify;
   font-size: 0.8rem;
   font-weight: 400; 
+  line-height: 1.3;
 }
 
 #produk .showcase .card-text strong {
   color: #333;
-  font-size: 0.9rem;
+  font-size: 0.8rem;
 }
 
 #produk .showcase .mengapa-memilih-kami .items {
